confing firebase configs

--- a/public/index.html
+++ b/public/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
-    <title>Facil Factura - Servitec</title>
+    <title>All in one</title>
 
     <!--    Meta-->
-    <meta property="og:title" content="Servitec publicidad digital en google" />
+    <meta property="og:title" content="All in one Servitec" />
     <meta
       name="description"
-      content="..."
+      content="Venta y reparación de equipos all in one"
     />
     <!--  Falta keywords-->
     <meta name="keywords" content="" />
