add title, description and keywords

--- a/public/index.html
+++ b/public/index.html
@@ -6,16 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
-    <title>All in one</title>
+    <title>Cambio de pantallas all in one, pantalla nueva para all in one.</title>
 
     <!--    Meta-->
     <meta property="og:title" content="All in one Servitec" />
     <meta
       name="description"
-      content="Venta y reparación de equipos all in one"
+      content="Cambio de pantalla all in one para HP, Lenovo, LG, etc. Reparación de pantallas AIO. Venta de pantalla original nueva para all in one, Pantalla de all in one lenovo, repuesto de pantalla HP AIO."
     />
-    <!--  Falta keywords-->
-    <meta name="keywords" content="" />
+    <meta name="keywords" content="Pantalla de all in one lenovo, repuesto de pantalla HP AIO, pantalla de all in one, repuesto pantalla all in one, Cambiar pantalla all in one, pantalla 21.5 pulgadas, Venta de pantalla de computadora todo en uno, venta de pantalla all in one, all in one no enciende, Pantalla de pc all in one, Pantalla de pc all in one, pantalla all in one 24 pulgadas, pantalla 23.8 pulgadas all in one." />
     <meta name="author" content="Agencia Servitec" />
     <meta name="theme-color" content="#000000" />
     <meta property="og:url" content="%PUBLIC_URL" />
